Sorted the subfactors by number